--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,12 +5,13 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1 >Home Page Web Service Group 3 CNPM</h1>
+    <h1>Welcome to web service of group 3 CNPM"</h1>
+    <h1>Home Page Web Service Group 3 CNPM</h1>
     <div>
         <table border="1px">
             <tr>
                 <td>
-                    Get Account By ID (replace ID to number)
+                    Get Account By ID (replace ID by number)
                 </td>
                 <td>
                     /api/get-account/id
@@ -26,7 +27,7 @@
             </tr>
             <tr>
                 <td>
-                    Delete Account By ID (replace ID to number)
+                    Delete Account By ID (replace ID by number)
                 </td>
                 <td>
                     /api/delete-account/id
