--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -101,5 +101,34 @@
             </tr>
         </table>
     </div>
+    </br>
+    <div>
+        <table border="1px">
+            <tr>
+                <td>
+                    Get All Notification
+                </td>
+                <td>
+                    /get/notifications
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Get notification by id
+                </td>
+                <td>
+                    /get/notification?id=...
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Create notification
+                </td>
+                <td>
+                    /save/notification?content=....
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
